--- a/main.css
+++ b/main.css
@@ -1660,6 +1660,12 @@ a{
         animation-duration: 0.4s;
         animation-iteration-count: 1;
     }
+    .total-SEARCH-POPUP .logo-container img{
+        width: 80px;
+    }
+    .total-SEARCH-POPUP .logo-container p{
+        font-size: 12px;
+    }
     
     
     .SEARCH-POPUP-SHADE{
@@ -1674,7 +1680,7 @@ a{
         align-items: center;
         justify-content: space-between;
         gap: 30px;
-        padding: 13px 140px;
+        padding: 13px 60px;
         height: 130px;
         width: 100%;
         border-bottom: 2px solid #DDDDDD;
@@ -1694,8 +1700,8 @@ a{
         border-radius: 30px;
         transition: background-color 0.2s;
         height: 40px;
-        min-width: 200px;
-        max-width: 300px;
+        min-width: 40px;
+        max-width: 1dvh;
         transition: background-color 0.2s;
         border: none;
         outline: none;
@@ -1783,10 +1789,10 @@ a{
         top: 0;
         z-index: 999;
         border-radius: 0px 0px 6px 6px;
-        margin-right: 50px;
         padding: 30px;
-        width: 460px;
+        width: 100%;
         gap: 30px;
+        margin-right: 0;
         margin-top: 0px;
         position: fixed;
     }
